--- a/index.html
+++ b/index.html
@@ -1,8 +1,65 @@
 <!DOCTYPE html>
 <head>
     <title>Mi primera web</title>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+        }
+    </style>
 </head>
 <body>
+    <table style="width: 500px;">
+        <thead>
+            <tr>
+                <th>Proudto</th>
+                <th>Presio</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>caca</td>
+                <td>gratis</td>
+            </tr>
+            <tr>
+                <td>piss</td>
+                <td>19,90$</td>
+            </tr>
+            <tr>
+                <td>aaaaaaaaaaaaaaaaaaa</td>
+                <td>99,90$</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <td></td>
+            <td>Total: hartos$</td>
+        </tfoot>
+    </table>
+
+
+    <!-- ul es lista no ordenada-->
+    <ul>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+        <li>Elemento 4</li>
+    </ul>
+
+    <!-- ol es lista ordenada-->
+    <ol>
+        <li value="50">Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+        <li>Elemento 4</li>
+        <li>
+            <ol>
+                <li style="list-style-type: lower-roman">Subelemento 1</li>
+                <li style="list-style-type: lower-roman;">Subelemento 2</li>
+                <li style="list-style-type: lower-roman;">Subelemento 3</li>
+            </ol>
+        </li>
+    </ol>
+
+    
     <form action="/formulario" method="POST">
         <label for="nombre">Nombre</label>
         <input value="ola" type="text" id="nombre" name="nombre" placeholder="Nombre"/>
@@ -13,7 +70,9 @@
         <label for="comentario">Comentario</label>
         <textarea rows="10" cols="50" id="comentario" placeholder="ingrese comentario" name="comentario">Valor por defecto</textarea>
         <br>
-        <input type="submit" />
+        <button type="reset">Reestablecer</button>
+        <button type="button">Tipo Botón</button>
+        <button type="submit">Tipo Submit</button>
     </form>
     <h1>Mi primer heading</h1>
     <h2>Mi segundo heading</h2>
